# image-ascii-art-tauri

./: .eslintrc.json  README.md  build.sh  index.html  package.json  run.bat  tsconfig.json
.github/workflows/: node.js.yml  tauri-publish.yml  tauri.yml
src/: App.tsx  main.tsx  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: 128x128@2x.png~  32x32.png~  icon.icns
src/components/: GitHubProjectPanel.tsx  ImageAsciiPanel.tsx
src/components/github/: GitHubProjectPanel.tsx
src/components/mode-resolution-selector/: ModeResolutionSelector.tsx
src/components/resolution-parameters/: AutoResolutionSelector.scss  AutoResolutionSelector.tsx  ManualResolutionSelector.tsx
